# kirolinter

./: .gitignore  .kirolinter.yaml  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  TESTME.md  convo0816.txt  demo_analysis.json  docker-compose.yml  github_integration_test.json  kirolinter-results.sarif  kirolinter_memory.db  kirolinter_self_analysis.html  local_test_results.json  log.txt  pyproject.toml  report.json  requirements.txt  setup.py  test_github_integration.py  test_kirolinter_self.py  test_report.md  test_week4_features.py
.github/workflows/: kirolinter-devops-demo.yml  kirolinter-devops-example.yml
.kiro/: HACKATHON_COMPLIANCE_CHECKLIST.md  KIRO_USAGE_WRITEUP.md  agent_system_summary.md  demo_script.md  devpost_submission_checklist.md  kiro_usage_writeup.md  redis_implementation_summary.md  redis_transition_complete.md
.kiro/agent_memory/: conversation_memory.json
.kiro/hooks/: hook_config.yaml  on_commit_analysis.md  pr_review_automation.md  readme_spell_check.md
.kiro/knowledge_base/: best_practices.json  fix_templates.json  patterns.json  team_insights.json
.kiro/workflows/: code-review.yml
config/: default_rules.yaml
docs/: FINAL_PHASE8_COMPLETION_REPORT.md  advanced_config.md  best_practices.md  getting_started.md  phase8_completion_log.md  phase8_final_summary.md  rules.md  troubleshooting.md
kirolinter/: __main__.py  cli.py
kirolinter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kirolinter/agents/: __init__.py  fixer.py  (+6 more)
tests/: README.md  conftest.py  simple_test.py  simple_test.py.kirolinter-backup  test_commands.txt  test_file.py  test_github_integration.py  test_interactive_fixes_demo.py  test_interactive_fixes_flask.py  test_interactive_fixes_kirolinter.py  test_kirolinter_self.py  test_scanner.py  test_style_analyzer.py  test_suggester.py  test_week4_features.py
(+186 files in other folders)
