[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kirolinter"
version = "0.1.0"
description = "AI-driven code review tool for Python codebases"
authors = [{ name = "Khan Tran", email = "khanster408@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.3",
    "pyyaml>=6.0",
    "gitpython>=3.1.43",
]

[project.scripts]
kirolinter = "kirolinter.cli:cli"
