[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kirolinter"
version = "0.1.0"
description = "AI-driven code review tool for Python codebases"
authors = [{ name = "Khan Tran", email = "khanster408@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.3",
    "pyyaml>=6.0",
    "gitpython>=3.1.43",
    "requests>=2.28.0",
    "pytest>=7.0.0",
    "redis>=4.5.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
]
devops = [
    "apscheduler>=3.9.0",
    "psutil>=5.8.0",
    "asyncpg>=0.28.0",
    "pydantic>=2.0.0",
    "celery>=5.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pytest-asyncio>=0.21.0",
    "flower>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "PyGithub>=2.1.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
kirolinter = "kirolinter.cli:cli"
